# opengl_template

./: CMakeLists.txt  README.md
ext/glad/: CMakeLists.txt
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
shaders/: fragment.frag
src/: main.cpp
